# slice-dict

./: README.md  dummy.py  pyproject.toml  setup.py  test.py
SliceDict/: __init__.py  base.py  index.py
SliceDict/_lib/: __init__.py  lib.py  mock.py
goodbadugly/: __init__.py  base.py  formatting.py  frame.py  indexdict.py
goodbadugly/lib/: __init__.py  helper.py
slice_dict/: __init__.py  lib.py  slicedict.py
sliceable_dict/: __init__.py  core.py  lib.py
tests/: requirements.txt  test_AxisContainer.py  test_BaseContainer.py  test_SimpleIdex.py  test_SliceDict.py  test_axis.py  test_frame.py  test_pickle.py
