[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sliceable_dict"
version = "0.2.1"
authors = [
  { name="Bert Palm", email="bert.palm.home@gmail.com" },
]
description = "Dictionary that support slicing and multiple key selection"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/palmb/slice-dict"
"Bug Tracker" = "https://github.com/palmb/slice-dict/issues"